[Rahul] Swagger Part Completed
