# BackEnd/swagger.json
@@ -11,8 +11,6 @@
     },
     "host": "localhost:8000",
     "basePath": "/",
-   
-    
     "schemes": [
         "http",
         "https"
@@ -50,7 +48,7 @@
                         "in": "body",
                         "description": "Register a new user",
                         "schema": {
-                            "$ref": "#/definitions/User"
+                            "$ref": "#/definitions/UserRegistration"
                         }
                     }
                 ],
@@ -61,7 +59,7 @@
                     "200": {
                         "description": "Registration Success",
                         "schema": {
-                            "$ref": "#/definitions/User"
+                            "$ref": "#/definitions/UserRegistration"
                         }
                     },
                     "500": {
@@ -231,14 +229,13 @@
                 "summary": "Delete Notes",
                 "tags": [
                     "Notes"
-                    
                 ],
                 "description": "Note deleted from the system",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "required":"true",
+                        "required": "true",
                         "description": "Note id(which is supposed to be deleted) "
                     }
                 ],
@@ -262,21 +259,19 @@
                 "description": "Modify Note from the system",
                 "parameters": [
                     {
-
                         "name": "details",
                         "in": "body",
-                        "required":"true",
+                        "required": "true",
                         "description": "Data which you want to Modify ",
                         "schema": {
                             "$ref": "#/definitions/createNote"
                         }
                     },
                     {
-                        "name":"id",
-                        "in":"path",
-                        "required":"true",
+                        "name": "id",
+                        "in": "path",
+                        "required": "true",
                         "description": "Note id(which is supposed to be modified) "
-
                     }
                 ],
                 "produces": [
@@ -294,9 +289,8 @@
                     }
                 }
             }
-            
         },
-        "/moveToArchive/{id}":{
+        "/moveToArchive/{id}": {
             "put": {
                 "summary": "Move Note to Archive",
                 "tags": [
@@ -307,7 +301,7 @@
                     {
                         "name": "id",
                         "in": "path",
-                        "required":"true",
+                        "required": "true",
                         "description": "Note id(which is supposed to be Archive) "
                     }
                 ],
@@ -323,9 +317,8 @@
                     }
                 }
             }
-
         },
-        "/moveToTrash/{id}":{
+        "/moveToTrash/{id}": {
             "put": {
                 "summary": "Move Note to Trash",
                 "tags": [
@@ -336,7 +329,7 @@
                     {
                         "name": "id",
                         "in": "path",
-                        "required":"true",
+                        "required": "true",
                         "description": "Note id(which is supposed to be Trash) "
                     }
                 ],
@@ -352,11 +345,318 @@
                     }
                 }
             }
+        },
+        "/addlabel/{noteId}": {
+            "put": {
+                "summary": "Add Label On Notes",
+                "tags": [
+                    "Notes"
+                ],
+                "description": "Adding Label On Notes",
+                "parameters": [
+                        {
+                            "name": "noteId",
+                            "in": "path",
+                            "required": "true",
+                            "description": "Enter Note Id where you want  to add label "
+                        },
+                        {
+                            "name":"labelId",
+                            "in":"body",
+                            "required":"true",
+                            "description":"Enter Label Id which you want to add in note",
+                            "schema": {
+                                "$ref": "#/definitions/label"
+                            }
+                        }
+                    
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Note sucessfully Trash",
+                        "schema": {
+                            "$ref": "#/definitions/label"
+                        }
+                    },
+                    "500": {
+                        "description": "error occured!!"
+                    }
+                }
+            }
+        },
+        "/removelabel/{noteId}": {
+            "put": {
+                "summary": "Remove Label From Notes",
+                "tags": [
+                    "Notes"
+                ],
+                "description": "Remove Label From Notes",
+                "parameters": [
+                        {
+                            "name": "noteId",
+                            "in": "path",
+                            "required": "true",
+                            "description": "Enter Note Id where you want  to Remove label "
+                        },
+                        {
+                            "name":"labelId",
+                            "in":"body",
+                            "required":"true",
+                            "description":"Enter Label Id which you want to remove from note",
+                            "schema": {
+                                "$ref": "#/definitions/label"
+                            }
+                        }
+                    
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Note sucessfully Trash",
+                        "schema": {
+                            "$ref": "#/definitions/label"
+                        }
+                    },
+                    "500": {
+                        "description": "error occured!!"
+                    }
+                }
+            }
+        },
+        "/createCollaborator": {
+            "put": {
+                "summary": "Add Collaborator on Notes",
+                "tags": [
+                    "Notes"
+                ],
+                "description": "Add Collaborator on Notes",
+                "parameters": [
+                        {
+                            "name":"Add Collaborator details Notes",
+                            "in":"body",
+                            "required":"true",
+                            "description":"Add Collaborator details Notes",
+                            "schema": {
+                                "$ref": "#/definitions/Collaborator"
+                            }
+                        }
+                    
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Collaborator Added sucessfully",
+                        "schema": {
+                            "$ref": "#/definitions/Collaborator"
+                        }
+                    },
+                    "500": {
+                        "description": "error occured!!"
+                    }
+                }
+            }
+        },
+        "/removeCollaborator": {
+            "put": {
+                "summary": "Remove Collaborator From Notes",
+                "tags": [
+                    "Notes"
+                ],
+                "description": "Remove Collaborator From Notes",
+                "parameters": [
+                        {
+                            "name":"Remove Collaborator From Notes",
+                            "in":"body",
+                            "required":"true",
+                            "description":"Remove Collaborator From Notes",
+                            "schema": {
+                                "$ref": "#/definitions/Collaborator"
+                            }
+                        }
+                    
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Collaborator Added sucessfully",
+                        "schema": {
+                            "$ref": "#/definitions/Collaborator"
+                        }
+                    },
+                    "500": {
+                        "description": "error occured!!"
+                    }
+                }
+            }
+        },
+        "/note/search":{
+            "get": {
+                "summary": "Search User by lName,Fname,Email",
+                "tags": [
+                    "Users"
+                ],
+                "description": "Search User by lName,Fname,Email",
+                "parameters": [
+                    {
+                        "name": "searchKey",
+                        "in": "body",
+                        "description": "Search User by lName,Fname,Email",
+                        "schema": {
+                            "$ref": "#/definitions/UserSearch"
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Data search Sucessfully",
+                        "schema": {
+                            "$ref": "#/definitions/UserSearch"
+                        }
+                    },
+                    "500": {
+                        "description": "Some Error Occured!!"
+                    }
+                }
+            }
+
+        },
+
+
+        "/label":{
+            "post": {
+                "summary": "Add new Label on Notes",
+                "tags": [
+                    "Labels"
+                ],
+                "description": "Add new Label on Notes",
+                "parameters": [
+                    {
+                        "name": "labelName",
+                        "in": "body",
+                        "description": "Add new Label on Notes",
+                        "schema": {
+                            "$ref": "#/definitions/Addlabel"
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Label Added Sucessfully",
+                        "schema": {
+                            "$ref": "#/definitions/Addlabel"
+                        }
+                    },
+                    "500": {
+                        "description": "Some Error Occured!!"
+                    }
+                }
+            },
+            "get": {
+                "summary": "Getting All Label",
+                "tags": [
+                    "Labels"
+                ],
+                "description": "Getting All Label",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Getting All Label sucessfully"
+                    },
+                    "500": {
+                        "description": "some Error occure!!"
+                    }
+                }
+            }
+        },
+        "/label/{id}":{
+            "delete": {
+                "summary": "Delete Labels",
+                "tags": [
+                    "Labels"
+                ],
+                "description": "Labels deleted from the Note",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": "true",
+                        "description": "Label id(which is supposed to be deleted) "
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Labels Deletes sucessfully"
+                    },
+                    "500": {
+                        "description": "error occured!!"
+                    }
+                }
+            },
+            "put": {
+                "summary": "Modifying Label On Notes",
+                "tags": [
+                    "Labels"
+                ],
+                "description": "Modifying Label On Notes",
+                "parameters": [
+                        {
+                            "name": "id",
+                            "in": "path",
+                            "required": "true",
+                            "description": "Enter Label Id where you want Modify label "
+                        },
+                        {
+                            "name":"labelName",
+                            "in":"body",
+                            "required":"true",
+                            "description":"Enter  updated Label Name which you want to update in note",
+                            "schema": {
+                                "$ref": "#/definitions/Addlabel"
+                            }
+                        }
+                    
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Note sucessfully Trash",
+                        "schema": {
+                            "$ref": "#/definitions/Addlabel"
+                        }
+                    },
+                    "500": {
+                        "description": "error occured!!"
+                    }
+                }
+            }
 
         }
+
     },
     "definitions": {
-        "User": {
+        "UserRegistration": {
             "properties": {
                 "firstName": {
                     "type": "string"
@@ -403,6 +703,37 @@
                 },
                 "notedata": {
                     "type": "string"
+                }
+            }
+        },
+        "label":{
+            "properties": {
+                "labelId": {
+                    "type": "string"
+                }
+            }
+        },
+        "Collaborator":{
+            "properties": {
+                "noteId": {
+                    "type": "string"
+                },
+                "userId":{
+                    "type":"string"
+                }
+            }
+        },
+        "UserSearch":{
+            "properties": {
+                "searchKey": {
+                    "type": "string"
+                }
+            }
+        },
+        "Addlabel":{
+            "properties":{
+                "labelName":{
+                    "type":"string"
                 }
             }
         }
